OO-6369: set the exact status list to see deactivated users